# pace-calculator

./: LICENSE  MANIFEST.in  README.md  pacecalc.py  pyproject.toml  setup.py
